без мобильной версии

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import url(./blocks/header/__menu/header__menu.css);
 @import url(./blocks/header/__button/header__button.css);
 @import url(./blocks/header/__navigation/header__navigation.css);
+@import url(./blocks/header/__navigation/_active/header__navigation_active.css);
 @import url(./blocks/header/__title/header__title.css);
 @import url(./blocks/main/main.css);
 @import url(./blocks/main/main__telephone-image/main__telephone-image.css);
@@ -14,3 +15,34 @@
 @import url(./blocks/main/__telephone/main__telephone.css);
 @import url(./blocks/main/__title/main__title.css);
 @import url(./blocks/main/__title-image/main__title-image.css);
+@import url(./blocks/about/about.css);
+@import url(./blocks/left-column/left-column.css);
+@import url(./blocks/left-column/__point/left-column__point.css);
+@import url(./blocks/left-column/__point-image/left-column__point-image.css);
+@import url(./blocks/left-column/__point-name/left-column__point-name.css);
+@import url(./blocks/left-column/__point-work/left-column__point-work.css);
+@import url(./blocks/left-column/__title/left-column__title.css);
+@import url(./blocks/right-column/right-column.css);
+@import url(./blocks/right-column/__point/right-column__point.css);
+@import url(./blocks/right-column/__point-name/right-column__point-name.css);
+@import url(./blocks/right-column/__point-image/right-column__point-image.css);
+@import url(./blocks/right-column/__point-about/right-column__point-about.css);
+@import url(./blocks/right-column/__subtitle/right-column__subtitle.css);
+@import url(./blocks/right-column/__title/right-column__title.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__part/footer__part.css);
+@import url(./blocks/footer/__text/footer__text.css);
+@import url(./blocks/footer/__title/footer__title.css);
+@import url(./blocks/footer/__link/footer__link.css);
+@import url(./blocks/certificates/certificates.css);
+@import url(./blocks/slider/slider.css);
+@import url(./blocks/popup/__card-photo/popup__card-photo.css);
+@import url(./blocks/popup/__card-container/popup__card-container.css);
+@import url(./blocks/popup/__close/popup__close.css);
+@import url(./blocks/popup/_type/_card/popup_type_card.css);
+@import url(./blocks/popup/popup.css);
+@import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/prise/prise.css);
+@import url(./blocks/prise/__point-cash/prise__point-cash.css);
+@import url(./blocks/prise/__point-name/prise__point-name.css);
+@import url(./blocks/prise/__point/prise__point.css);
