--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -13,6 +13,7 @@
     font-family: Roboto,Arial,sans-serif;
     font-size: 24px;
     transition: opacity 1s ease-in-out;
+    text-decoration: none;
 }
 
 .header__button:hover {
