--- a/src/blocks/main/__button/main__button.css
+++ b/src/blocks/main/__button/main__button.css
@@ -13,6 +13,7 @@
     border-radius: 5px;
     text-align: center;
     transition: opacity 0.5s ease-in-out;
+    text-decoration: none;
 }
 
 .main__button:hover {
