--- a/src/blocks/main/__image/main__image.css
+++ b/src/blocks/main/__image/main__image.css
@@ -1,7 +1,9 @@
 .main__image {
     height: 100%;
+    object-fit: contain;
+    object-position: center;
     position: absolute;
-    right: 45px;
+    right: 0;
     top: 0;
     z-index: 0;
 }
