--- a/src/blocks/main/__button/main__button.css
+++ b/src/blocks/main/__button/main__button.css
@@ -14,6 +14,7 @@
     text-align: center;
     transition: opacity 0.5s ease-in-out;
     text-decoration: none;
+    z-index: 2;
 }
 
 .main__button:hover {
