--- a/src/blocks/main/__image/main__image.css
+++ b/src/blocks/main/__image/main__image.css
@@ -1,6 +1,7 @@
 .main__image {
-    height: 100%;
-    object-fit: contain;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: cover;
     object-position: center;
     position: absolute;
     right: 0;
