--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -2,6 +2,15 @@
     width: calc(100% - 100px);
     padding: 50px 0 50px 100px;
     position: relative;
+    display: flex;
+    flex-direction: column;
     background-color: #1580EB;
-    overflow: hidden;
+}
+
+@media  screen and (max-width: 900px) {
+    .main {
+        width: 100%;
+        padding-left: 0;
+        align-items: center;
+    }
 }
