--- a/src/blocks/right-column/__point-name/right-column__point-name.css
+++ b/src/blocks/right-column/__point-name/right-column__point-name.css
@@ -1,7 +1,6 @@
 .right-column__point-name {
     grid-area: name;
-    margin-top: 0;
-    margin-bottom: 20px;
+    margin: 0;
     width: 80%;
     text-align: left;
     font-family: Mulish, Mulish, Roboto, Arial, sans-serif;
