--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @import url(./blocks/body/body.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__menu/header__menu.css);
+@import url(./blocks/header/__menu-button/header__menu-button.css);
+@import url(./blocks/header/__menu/_active/header__menu_active.css);
 @import url(./blocks/header/__button/header__button.css);
 @import url(./blocks/header/__navigation/header__navigation.css);
 @import url(./blocks/header/__navigation/_active/header__navigation_active.css);
@@ -46,3 +48,6 @@
 @import url(./blocks/prise/__point-cash/prise__point-cash.css);
 @import url(./blocks/prise/__point-name/prise__point-name.css);
 @import url(./blocks/prise/__point/prise__point.css);
+@import url(./blocks/contacts/contacts.css);
+@import url(./blocks/contacts/__subtitle/contacts__subtitle.css);
+@import url(./blocks/contacts/__title/contacts__title.css);
