--- a/src/blocks/about/about.css
+++ b/src/blocks/about/about.css
@@ -5,3 +5,18 @@
     flex-direction: row;
     background-color: white;
 }
+
+@media screen and (max-width: 1280px) {
+    .about {
+        width: calc(100% - 40px);
+        padding: 30px 20px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .about {
+        width: calc(100% - 40px);
+        padding: 30px 20px;
+        flex-direction: column;
+    }
+}
