--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -6,3 +6,21 @@
     grid-template-columns: repeat(3, 1fr) 300px;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 1000px) {
+    .footer {
+        width: calc(100% - 40px);
+        padding: 20px;
+        grid-template-columns: 1fr minmax(300px,1fr);
+        grid-template-rows: repeat(2, auto);
+    }
+}
+
+@media screen and (max-width: 660px) {
+    .footer {
+        width: calc(100% - 40px);
+        padding: 20px;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, auto);
+    }
+}
