--- a/src/blocks/left-column/left-column.css
+++ b/src/blocks/left-column/left-column.css
@@ -6,3 +6,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media screen and (max-width: 1000px) {
+    .left-column {
+        width: calc(100% - 60px)
+    }
+}
